i fixed the product list issue that prevents the products from aligning at the home page, i also added some more html elements to the pdp

--- a/src/component/Main/main.css
+++ b/src/component/Main/main.css
@@ -17,6 +17,11 @@
         margin: 0 auto;
         border-radius: 10px;
         z-index: 0;
+        width: 90%;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
 
         .men-section-container-item {
             width: 200px;
